# ImageHashing

./: .gitmodules  CMakeLists.txt
interface/: CMakeLists.txt
interface/sources/entrypoint/: Entrypoint.cpp
software/: CMakeLists.txt
software/include/: Hasher.h  pre-cheader.h
software/include/algorythm/: DCT.h  LoG.h  Phash.h
software/include/application/: Application.h
software/include/core/: Base.h  Core.h  Log.h
software/sources/algorythm/: DCT.cpp  LoG.cpp  Phash.cpp
software/sources/application/: Application.cpp
software/sources/core/: Core.cpp  Log.cpp
